# medicine-photo-ai-python-demo

./: .dockerignore  .gitignore  Dockerfile  README.md  app.py  docker-compose.yaml  pyproject.toml  requirements.txt
.github/workflows/: google-cloudrun-docker.yml
app/: __init__.py  app.py  config.py  di.py  logging_config.py
app/models/: image_entry.py
app/repository/: image_repository.py
app/routes/: api.py  auth_api.py  web.py
app/services/: auth.py  image_service.py  photo_analyzer.py
src/app/: app.py  config.py
src/app/models/: image_entry.py
src/app/repository/: image_repository.py
src/app/services/: auth.py  image_service.py  photo_analyzer.py
src/app/storage/: filesystem.py
src/app/validation/: image_validator.py
src/templates/: upload.html
src/tests/: test_filesystem.py  test_image_repository.py  test_image_service.py  test_image_validator.py
templates/: _gallery.html  index.html  upload.html
tests/: test_filesystem.py  test_image_repository.py  test_image_service.py
