[project]
name = "medicine-photo-ai-python-demo"
version = "0.1.0"
description = "Demo FastAPI app for uploading and listing medicine-related photos using local filesystem storage."
authors = [{ name = "Tamas Bereczki", email = "btamas889@gmail.com" }]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]",
    "Werkzeug>=3.0.0",
    "starlette==0.48.0",
    "authlib>=1.3.0",
    "itsdangerous>=2.2.0",
    "dotenv==0.9.9",
    "google-genai==1.43.0",
]

[project.scripts]
app = "app.app:app"

[project.urls]
Repository = "https://github.com/bereczkitamas/medicine-photo-ai-python-demo"

[dependency-groups]
dev = [
    "pytest>=8.0.0"
]

[tool.uv]
package = true

[tool.pytest.ini_options]
addopts = "--maxfail=1"

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]
ignore = [
    "E501",  # line too long, handled by black
    "B008",  # do not perform function calls in argument defaults
    "C901",  # too complex
    "W191",  # indentation contains tabs
]
